--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: Mark's Notes # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_description:
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -199,6 +199,10 @@ exclude:
   - _pages/teaching.md
   - _pages/profiles.md
   - _pages/dropdown.md
+  - _pages/repositories.md
+  - _includes/repository/
+  - _pages/blog.md
+  - _pages/projects.md
 keep_files:
   - CNAME
   - .nojekyll
